--- a/MyFixIt/Views/Shared/_Layout.cshtml
+++ b/MyFixIt/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿@*
 //
 // Copyright (C) Microsoft Corporation.  All rights reserved.
-// 
+// Blah blah
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
 // You may obtain a copy of the License at
@@ -23,6 +23,7 @@
     <title>@ViewBag.Title - Fix It Sample</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    
 
 </head>
 <body>
@@ -34,7 +35,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("FixItApp", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("FixItApp Sam", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
