--- a/MyFixIt/Views/Shared/_Layout.cshtml
+++ b/MyFixIt/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("FixItApp Sam", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
